# GroovyGravity

./: CMakeLists.txt  README.md  todo.md
img/: 2026-07-02_all_planets_orbiting.mov
include/: body.hpp  bodyRenderer.hpp  bodyUtils.hpp  celestialBody.hpp  config.hpp  drawable.hpp  object.hpp  objectUtils.hpp  presets.hpp  spaceTime.hpp  universe.hpp  universeRenderer.hpp  utils.hpp
include/config/: config.hpp  presets.hpp
include/physics/: body.hpp  bodyUtils.hpp
include/render/: bodyRenderer.hpp  universeRenderer.hpp
shaders/: body.vert  common.frag  gravity.frag  gravity.vert  object.vert  spaceTime.frag  spaceTime.vert
src/: body.cpp  bodyRenderer.cpp  bodyUtils.cpp  celestialBody.cpp  main.cpp  object.cpp  objectUtils.cpp  spaceTime.cpp  test.cpp  universe.cpp  universeRenderer.cpp
src/physics/: body.cpp  bodyUtils.cpp  universe.cpp
src/render/: bodyRenderer.cpp  spaceTime.cpp  universeRenderer.cpp
